methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
  for (i<-1 to 7)
  {
    avance()
  }
  gauche()
    for (i<-1 to 7)
  {
    avance()
  }
  droite()
}

run()
{	
  for(i <- 1 to 7)
	{
  	dogHouse();
	}
}
